# CoreProject-fork

auth/: Cargo.toml  alembic.ini  pyproject.toml  test.py
auth/alembic/: env.py
auth/apps/oidc/: api.py  apps.py  schemas.py  urls.py  utils.py
auth/apps/oidc/admin/: __init__.py  authorization_code.py
auth/apps/oidc/migrations/: 0002_initial.py
auth/apps/oidc/models/: client.py  token.py
auth/apps/users/: admin.py  backends.py  forms.py  generators.py  managers.py  mixins.py  models.py  utils.py
auth/apps/users/admin/: __init__.py  client.py  token.py  user.py
auth/apps/users/forms/: __init__.py  change_form.py  creation_form.py
auth/apps/users/migrations/: 0001_initial.py  0002_client_authorizationcode.py  0003_alter_authorizationcode_id_alter_client_client_type_and_more.py
auth/apps/users/mixins/: __init__.py  created_at.py  updated_at.py  uuid_primary_key.py
auth/apps/users/models/: __init__.py  authorization_code.py  client.py  token.py  user.py
auth/backend/: test.py
auth/backend/apps/oidc/: api.py  auth.py  helper.py  schemas.py  urls.py  utils.py
auth/backend/apps/oidc/migrations/: 0001_initial.py  0002_initial.py
auth/backend/apps/oidc/models/: __init__.py  authorization_code.py  token.py
auth/backend/apps/users/: backends.py  models.py
auth/backend/apps/users/migrations/: 0001_initial.py
auth/backend/core/: settings.py
auth/backend/mixins/: uuid_primary_key.py
auth/core/: asgi.py  settings.py  urls.py
auth/generators/: __init__.py  ulid.py
auth/mixins/: expires_at.py
auth/src/: app.py  main.rs
auth/src/entities/: users.rs
auth/src/models/: user.py
seeder/: package.json
seeder/src/: app.css
seeder/src/routes/: +page.svelte
seeder/src/routes/test/: +page.svelte  +page@.svelte
tracker/: docker-compose.yml
tracker/backend/: alembic.ini  pyproject.toml
tracker/backend/alembic/: env.py
tracker/backend/alembic/versions/: 5d939cd51c6c_initial.py
tracker/backend/coreproject_tracker/: app.py  cli.py  database.py
tracker/backend/coreproject_tracker/converters/: bytes.py  numbers.py
tracker/backend/coreproject_tracker/envs/: __init__.py  database.py
tracker/backend/coreproject_tracker/functions/: ip.py  redis.py
tracker/frontend/: next.config.ts  package-lock.json  package.json  test.sh
tracker/frontend/docker/: Dockerfile.standalone
(+19 files in other folders)
