[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenvy = "0.15"
