[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "passlib[argon2]>=1.7.4",
    "sqlalchemy[postgresql-asyncpg]>=2.0.40",
    "sqlmodel>=0.0.24",
]
