[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-dynamic-filenames>=1.4.0",
    "django-ninja>=1.4.3",
    "django-stubs-ext>=5.2.0",
    "django[argon2]>=5.2",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.7",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = ["django-cprofile-middleware>=1.0.5", "django-debug-toolbar>=5.2.0"]
